--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,8 +18,6 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo {
-}
 
 .search,
 .search-result {
@@ -97,5 +95,9 @@
     }
 }
 
-.action {
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    padding: 4px 8px;
+    background-color: transparent;
 }
